fixed scrolling issue on mobile phones

--- a/main.css
+++ b/main.css
@@ -403,6 +403,10 @@ a:hover
 {
     display: none;
 }
+html 
+{
+    overflow-x: hidden;
+}
 body 
 {
     background-color: black;
